Refactor GVN for more generic constant folding and to respect integer overflow rules (Bug 678625, r=dvander)

--HG--
extra : rebase_source : 24f128b68e712c956c5c2eb83090a85a2344b0aa